feat: Add `FXMLFactoryMethod` support to enhance factory method parsing and validation across `FXMLDocumentParser`, with tests for observed usage scenarios